# templ.c

./: .clangd  .gitmodules  CMakeInfo.txt  CMakeLists.txt  CMakeOptions.txt  Doxyfile  LICENSE  README.md  setup.sh
example/: CMakeLists.txt  main.c
include/lib/: apidef.h  main.h  primitive_types.h
include/mylib/: apidef.h  main.h
src/: main.c
tests/: CMakeLists.txt  README.md  test_main.c  test_main.cpp
